# QuantumFolio

./: .gitignore  README.md
backend/: main.py  models.py  pyproject.toml
backend/api/: routes.py  websocket.py
backend/data/: fetcher.py  tickers.py
backend/quantum/: circuit.py  classical.py  qaoa.py  qubo.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  store.ts  types.ts
frontend/src/components/: AllocationChart.tsx  BlochSphere.tsx  CircuitDiagram.tsx  ComparisonPanel.tsx  LegalDisclaimer.tsx  LossChart.tsx  MetricCard.tsx  Narration.tsx  ProbabilityChart.tsx  ProgressBar.tsx  RiskSlider.tsx  TickerSearch.tsx  WakeUpScreen.tsx
frontend/src/views/: InputView.tsx  ResultsView.tsx  SolverView.tsx
